--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body class="page01" background="F:\Versão final\img\fundofone.jpg">
         
         <div class="dj"  >
-           <font size="10px" color="#C0C0C0">DJ Jards</font>
+           <font size="20px" color="black">DJ Jards</font>
         </div>   
          <header>
            
